Finalized module to create a room.
