# service/src/main/java/br/com/sw2you/realmeet/validator/ValidationError.java
@@ -34,9 +34,6 @@ public class ValidationError {
 
     @Override
     public String toString() {
-        return "ValidatorError{" +
-                "field='" + field + '\'' +
-                ", errorCode='" + errorCode + '\'' +
-                '}';
+        return "ValidatorError{" + "field='" + field + '\'' + ", errorCode='" + errorCode + '\'' + '}';
     }
 }
